# Minigit

./: .gitignore  CMakeLists.txt  Commit.h  MainWindow.cpp  MainWindow.h  README.md  Repository.h  Utils.cpp  compile_status.txt  student.txt
.minigit/: HEAD.txt  logs.txt
.minigit/commits/1775302742952/: Repository.cpp  main.cpp
.minigit/commits/1775379022535/: Test.txt
.minigit/commits/1775379280158/: Test.txt
.minigit/commits/1775398444463/: Repository.cpp
.minigit/commits/1775399128798/: Test.txt  main.cpp
build_mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  build_error.txt  cmake_install.cmake  compile_out.txt
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mingw/Testing/Temporary/: CTestCostData.txt
build_mingw/minigit_gui_autogen/: deps
build_mingw/minigit_gui_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build_mingw/minigit_smoke_tests_autogen/: deps
src/: MainWindow.cpp  Utils.h
tests/: RepositorySmoke.cpp
